--- a/styles/globals.css
+++ b/styles/globals.css
@@ -37,6 +37,13 @@ textarea{
     border-image: url(/border.svg) 5 5 5 5 stretch stretch;
 }
 
+.btn-xs{
+    @apply inline-block px-1 border-black font-fancy text-black text-xl transition-all hover:drop-shadow-lg;
+    border-style: solid;
+    border-width: 2px 2px 2px 2px;
+    border-image: url(/border.svg) 3 3 3 3 stretch stretch;
+}
+
 
 .header{
     @apply text-4xl sm:text-5xl md:text-6xl lg:text-7xl font-fancy text-center;
