--- a/components/Parchment/Parchment.module.css
+++ b/components/Parchment/Parchment.module.css
@@ -14,21 +14,21 @@
     width: calc(100% - 20px);
     max-width: 960px;
     min-height: calc(100vh - 2.5rem);
-    margin: 1rem auto;
+    margin: 1rem auto 6rem auto;
     padding: 4rem;
 }
 
 @media only screen and (max-width: 1024px) {
     .container{
         padding: 2rem;
-        margin: 1 rem auto;
+        margin: 1rem auto 6rem auto;
         min-height: calc(100vh - 2rem);
     }
   }
   @media only screen and (max-width: 580px) {
     .container{
         padding: 1rem;
-        margin: 1rem auto;
+        margin: 1rem auto 5rem auto;
         min-height: calc(100vh - 2rem);
     }
   }
